--- a/css/style.css
+++ b/css/style.css
@@ -262,7 +262,6 @@ h2 {
   .tuto h2 {
     width: 82%;
     margin: 0 auto;
-    padding-left: 0;
   }
   .tuto__steps {
     display: flex;
@@ -270,7 +269,7 @@ h2 {
     justify-content: space-between;
     gap: 30px;
     flex-wrap: wrap;
-    width: 80%;
+    width: 82%;
     margin: 0 auto;
   }
   .tuto__step {
@@ -342,14 +341,13 @@ h2 {
 }
 @media screen and (min-width: 1024px) {
   .cards {
-    width: 80%;
+    width: 82%;
     margin: 20px auto 0 auto;
     padding-bottom: 20px;
   }
   .restaurants h2 {
-    width: 80%;
+    width: 82%;
     margin: 0 auto;
-    padding-left: 0;
   }
 }
 .cardimg {
@@ -541,7 +539,7 @@ h2 {
 
 .menu__title__h2::after {
   content: "";
-  width: 10%;
+  width: 8%;
   background-color: #99e2d0;
   height: 3px;
   bottom: 0;
@@ -555,8 +553,31 @@ h2 {
     height: 360px;
     object-fit: cover;
   }
+  .menu__title__h2::after {
+    content: "";
+    width: 6%;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .menu {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .menu__list {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .menu__title__h2::after {
+    content: "";
+    width: 4.4%;
+  }
 }
 @media screen and (max-width: 1440px) {
+  .menu__list {
+    width: 60%;
+  }
   .cardimg {
     width: 100%;
     object-fit: cover;
@@ -565,9 +586,10 @@ h2 {
   .cards {
     gap: 50px;
     width: 80%;
+    justify-content: space-between;
   }
   .cards .card {
-    width: 40%;
+    width: 45%;
   }
 }
 .loader {
