--- a/sass/components/menu_cards.scss
+++ b/sass/components/menu_cards.scss
@@ -54,7 +54,7 @@
 
 .menu__title__h2::after {
   content: "";
-  width: 10%;
+  width: 8%;
   background-color: $tertiaryColor;
   height: 3px;
   bottom: 0;
@@ -68,6 +68,32 @@
     height: 360px;
     object-fit: cover;
   }
+
+  .menu__title__h2::after {
+    content: "";
+    width: 6%;
+  }
+            
+}
+
+@media screen and (min-width: 1024px) {
+
+  .menu {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .menu__list {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .menu__title__h2::after {
+    content: "";
+    width: 4.4%;
+  }
             
 }
 
@@ -79,6 +105,10 @@
 
 @media screen and (max-width: 1440px) {
 
+  .menu__list {
+    width: 60%;
+  }
+
   .cardimg {
     width: 100%;
     object-fit: cover;
@@ -87,8 +117,9 @@
   .cards {
     gap: 50px;
     width: 80%;
+    justify-content: space-between;
     .card {
-      width: 40%;
+      width: 45%;
     }
   }
   
