--- a/css/style.css
+++ b/css/style.css
@@ -574,7 +574,7 @@ h2 {
     width: 4.4%;
   }
 }
-@media screen and (max-width: 1440px) {
+@media screen and (min-width: 1440px) {
   .menu__list {
     width: 60%;
   }
